--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -148,11 +148,21 @@
   <ItemGroup>
     <ClCompile Include="BGR24.cpp" />
     <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="IAnyKeyDownListener.cpp" />
     <ClCompile Include="IAnyKeyUpListener.cpp" />
+    <ClCompile Include="IKeyDownListener.cpp" />
+    <ClCompile Include="IKeyUpListener.cpp" />
+    <ClCompile Include="ILeftMouseButtonDownListener.cpp" />
+    <ClCompile Include="ILeftMouseButtonUpListener.cpp" />
+    <ClCompile Include="IMiddleMouseButtonDownListener.cpp" />
+    <ClCompile Include="IMiddleMouseButtonUpListener.cpp" />
     <ClCompile Include="IMouseListener.cpp" />
+    <ClCompile Include="IMouseWheelUpdateListener.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="IRenderable.cpp" />
+    <ClCompile Include="IRightMouseButtonDownListener.cpp" />
+    <ClCompile Include="IRightMouseButtonUpListener.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Canvas2D.cpp" />
     <ClCompile Include="Canvas2DExtensions.cpp" />
@@ -171,10 +181,20 @@
     <ClInclude Include="BGR24.h" />
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="BitmapHeader.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="IAnyKeyDownListener.h" />
     <ClInclude Include="IAnyKeyUpListener.h" />
+    <ClInclude Include="IKeyDownListener.h" />
+    <ClInclude Include="IKeyUpListener.h" />
+    <ClInclude Include="ILeftMouseButtonDownListener.h" />
+    <ClInclude Include="ILeftMouseButtonUpListener.h" />
+    <ClInclude Include="IMiddleMouseButtonUpListener.h" />
     <ClInclude Include="IMouseListener.h" />
+    <ClInclude Include="IMouseWheelUpdateListener.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="IRightMouseButtonDownListener.h" />
+    <ClInclude Include="IRightMouseButtonUpListener.h" />
+    <ClInclude Include="IMiddleMouseButtonDownListener.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Canvas2D.h" />
     <ClInclude Include="Canvas2DExtensions.h" />
