Add filters, rasterization, file saving and interactable interface

--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -88,6 +88,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\Lorenzofman\Documents\CG\Visual Studio\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,9 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BGR24.cpp" />
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="ExtractChannel.cpp" />
+    <ClCompile Include="Grayscale.cpp" />
+    <ClCompile Include="ImageHistogram.cpp" />
     <ClCompile Include="IAnyKeyDownListener.cpp" />
     <ClCompile Include="IAnyKeyUpListener.cpp" />
     <ClCompile Include="IKeyDownListener.cpp" />
@@ -160,6 +163,7 @@
     <ClCompile Include="IMouseListener.cpp" />
     <ClCompile Include="IMouseWheelUpdateListener.cpp" />
     <ClCompile Include="InputHandler.cpp" />
+    <ClCompile Include="Int2.cpp" />
     <ClCompile Include="IRenderable.cpp" />
     <ClCompile Include="IRightMouseButtonDownListener.cpp" />
     <ClCompile Include="IRightMouseButtonUpListener.cpp" />
@@ -168,8 +172,6 @@
     <ClCompile Include="Canvas2DExtensions.cpp" />
     <ClCompile Include="Float2.cpp" />
     <ClCompile Include="ImageConverter.cpp" />
-    <ClCompile Include="RGB24.cpp" />
-    <ClCompile Include="ColorConversions.cpp" />
     <ClCompile Include="RGBFloat.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="ImageType.cpp" />
@@ -178,20 +180,25 @@
     <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BGR24.h" />
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="BitmapHeader.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Channel.h" />
+    <ClInclude Include="ExtractChannel.h" />
+    <ClInclude Include="Grayscale.h" />
+    <ClInclude Include="ImageHistogram.h" />
     <ClInclude Include="IAnyKeyDownListener.h" />
     <ClInclude Include="IAnyKeyUpListener.h" />
     <ClInclude Include="IKeyDownListener.h" />
     <ClInclude Include="IKeyUpListener.h" />
     <ClInclude Include="ILeftMouseButtonDownListener.h" />
     <ClInclude Include="ILeftMouseButtonUpListener.h" />
+    <ClInclude Include="ImageFilter.h" />
     <ClInclude Include="IMiddleMouseButtonUpListener.h" />
     <ClInclude Include="IMouseListener.h" />
     <ClInclude Include="IMouseWheelUpdateListener.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Int2.h" />
     <ClInclude Include="IRightMouseButtonDownListener.h" />
     <ClInclude Include="IRightMouseButtonUpListener.h" />
     <ClInclude Include="IMiddleMouseButtonDownListener.h" />
@@ -201,9 +208,6 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Float2.h" />
     <ClInclude Include="ImageConverter.h" />
-    <ClInclude Include="RGB24.h" />
-    <ClInclude Include="ColorConversions.h" />
-    <ClInclude Include="ColorSpace.h" />
     <ClInclude Include="RGBFloat.h" />
     <ClInclude Include="IRenderable.h" />
     <ClInclude Include="Image.h" />
