--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="ExtractChannel.cpp" />
     <ClCompile Include="Grayscale.cpp" />
+    <ClCompile Include="ImageActions.cpp" />
     <ClCompile Include="ImageHistogram.cpp" />
     <ClCompile Include="IAnyKeyDownListener.cpp" />
     <ClCompile Include="IAnyKeyUpListener.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="Channel.h" />
     <ClInclude Include="ExtractChannel.h" />
     <ClInclude Include="Grayscale.h" />
+    <ClInclude Include="ImageActions.h" />
     <ClInclude Include="ImageHistogram.h" />
     <ClInclude Include="IAnyKeyDownListener.h" />
     <ClInclude Include="IAnyKeyUpListener.h" />
@@ -194,7 +196,6 @@
     <ClInclude Include="IKeyUpListener.h" />
     <ClInclude Include="ILeftMouseButtonDownListener.h" />
     <ClInclude Include="ILeftMouseButtonUpListener.h" />
-    <ClInclude Include="ImageFilter.h" />
     <ClInclude Include="IMiddleMouseButtonUpListener.h" />
     <ClInclude Include="IMouseListener.h" />
     <ClInclude Include="IMouseWheelUpdateListener.h" />
