--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -87,13 +87,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Lorenzo\Documents\ComputerGraphics\Canvas2D\Resources\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Lorenzo\Documents\ComputerGraphics\Canvas2D\Resources\Include;C:\Users\Lorenzofman\Documents\ComputerGraphics\Canvas2D\Resources\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Lorenzo\Documents\ComputerGraphics\Canvas2D\Resources\Library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Lorenzofman\Documents\ComputerGraphics\Canvas2D\Resources\Library;C:\Users\Lorenzo\Documents\ComputerGraphics\Canvas2D\Resources\Library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>/VERBOSE %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
@@ -157,7 +157,9 @@
     <ClCompile Include="RGBAFloat.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="FileDialog.cpp" />
+    <ClCompile Include="Screen.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
@@ -171,8 +173,10 @@
     <ClInclude Include="Rect.h" />
     <ClInclude Include="RGBAFloat.h" />
     <ClInclude Include="FileDialog.h" />
+    <ClInclude Include="Screen.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Types.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="freeglut.dll" />
