--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="ColorPalette.cpp" />
     <ClCompile Include="Int2.cpp" />
     <ClCompile Include="Canvas2D.cpp" />
     <ClCompile Include="Float2.cpp" />
@@ -164,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="ColorPalette.h" />
     <ClInclude Include="Int2.h" />
     <ClInclude Include="Canvas2D.h" />
     <ClInclude Include="Constants.h" />
