Add useful canvas2d extensions

--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Canvas2DExtensions.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="ColorPalette.cpp" />
     <ClCompile Include="Int2.cpp" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="Canvas2DExtensions.h" />
     <ClInclude Include="Circle.h" />
     <ClInclude Include="ColorPalette.h" />
     <ClInclude Include="Int2.h" />
