Shape transformer rendering

--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="FileDialog.cpp" />
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="ShapeTransformer.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +182,7 @@
     <ClInclude Include="FileDialog.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="ShapeTransformer.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
