Add generic multiple callback

--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -148,9 +148,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Callback.cpp" />
     <ClCompile Include="Canvas2DExtensions.cpp" />
     <ClCompile Include="Circle.cpp" />
-    <ClCompile Include="ColorPalette.cpp" />
+    <ClCompile Include="EventSystem.cpp" />
     <ClCompile Include="Int2.cpp" />
     <ClCompile Include="Canvas2D.cpp" />
     <ClCompile Include="Float2.cpp" />
@@ -167,9 +169,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="Callback.h" />
     <ClInclude Include="Canvas2DExtensions.h" />
     <ClInclude Include="Circle.h" />
-    <ClInclude Include="ColorPalette.h" />
+    <ClInclude Include="EventSystem.h" />
     <ClInclude Include="Int2.h" />
     <ClInclude Include="Canvas2D.h" />
     <ClInclude Include="Constants.h" />
